--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -1,16 +1,42 @@
+h1 {
+  color: #fff;
+}
+
+.fa-solid {
+  color: #e79214;
+  font-size: 40px;
+}
+
+.home__content {
+  padding-left: 15%;
+}
+
 .register {
   display: flex;
   flex-direction: column;
-  height: 100vh;
   justify-content: center;
   align-items: center;
+}
+
+.home {
+  justify-content: center;
+  background-image: url('../../images/drink.png');
+  background-size: cover;
+  background-position: right;
+  background-repeat: no-repeat;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  overflow-y: hidden;
 }
 
 .register form {
   max-width: 350px;
   display: flex;
   flex-direction: column;
-  border: 1px solid #eee;
+  border-color:#504444fc;
+  border-style: double;
   gap: 20px;
   margin: auto;
   padding: 10px 20px;
@@ -27,8 +53,22 @@
   width: 100%;
   text-align: center;
   padding: 15px;
-  background-color: blueviolet;
+  background-color: #3f51b5;
   color: white;
-  border: 1px solid blueviolet;
+  border: 1px solid #3f51b5;
   cursor: pointer;
+}
+
+.account {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+  color: #fff;
+}
+
+.account button {
+  width: 70px;
+  padding: 5px;
+  border-radius: 10px 7px;
 }
