--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -2,6 +2,7 @@ nav {
   background-color: rgb(22 21 21 / 58%);
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
