--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -32,10 +32,10 @@ h1 {
 }
 
 .register form {
-  max-width: 350px;
+  width: 35vw;
   display: flex;
   flex-direction: column;
-  border-color:#504444fc;
+  border-color: #504444fc;
   border-style: double;
   gap: 20px;
   margin: auto;
@@ -46,6 +46,7 @@ h1 {
 .register input {
   height: 30px;
   padding: 5px 10px;
+  font-size: larger;
   box-sizing: border-box;
 }
 
@@ -71,4 +72,25 @@ h1 {
   width: 70px;
   padding: 5px;
   border-radius: 10px 7px;
+}
+
+@media screen and (max-width: 425px) {
+  .register form {
+    width: 80vw;
+    padding: 10px;
+    background-color: #04040478;
+  }
+
+  .form {
+    left: 8%;
+  }
+
+  .home__content {
+    padding-left: 8%;
+  }
+
+  nav {
+    justify-content: end;
+  }
+
 }
