--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -38,13 +38,14 @@
   display: flex;
   flex-direction: column;
   background-color: #042331;
+  overflow-y: scroll;
 }
 
 .user {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100px;
+  min-height: 100px;
   background-color: #151e22;
   position: relative;
 }
