--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -1,11 +1,58 @@
+.profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 99vh;
+}
+
 .profile form {
   width: 35vw;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  border-color: #504444fc;
-  border-style: double;
+  border-color: #504444fc; 
+  border-style: double; 
   gap: 20px;
   margin: auto;
   padding: 10px 20px;
   text-align: center;
+}
+
+.profile input {
+  height: 40px;
+  width: 300px;
+  border-radius: 10px;
+  color: black;
+  font-size: 15px;
+  padding-left: 15px;
+}
+
+.profile button {
+  width: 100px;
+  color: black;
+  border-radius: 5px;
+  padding: 5px;
+  background-color: #ddba90;
+  border: 1px solid #ddba90;
+}
+
+.fa-user-secret {
+  font-size: 45px;
+  color: #0e4864e8;
+  background-color: #fff;
+  border-radius: 50%;
+  padding: 20px;
+}
+
+.disabled {
+  background-color: #aba5a5;;
+}
+
+.actions-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
 }
