--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -1,9 +1,86 @@
 .dashboard {
-    background-image: url('../../images/drink.png');
-    background-size: cover;
-    background-position: right;
-    background-repeat: no-repeat;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-  }
+  background-image: url('../../images/drink.png');
+  background-size: cover;
+  background-position: right;
+  background-repeat: no-repeat;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.dashboard h2 {
+  background-color: #151e22;
+  width: 100%;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-style: oblique;
+  margin-top: 20px;
+}
+
+.home2 input {
+  margin: 10px;
+  cursor: pointer;
+}
+
+.dashboard .sidebar {
+  position: fixed;
+  width: 250px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: #133746;
+  overflow-y: scroll;
+}
+
+.user {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100px;
+  background-color: #151e22;
+  position: relative;
+}
+
+.fa-user {
+  background-color: rgb(136, 132, 132);
+  padding: 15px;
+  border-radius: 50%;
+}
+
+.user span {
+  display: flex;
+  align-items: center;
+  width: 85%;
+  justify-content: space-between;
+}
+
+.identifier {
+  font-style: italic;
+}
+
+.content {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+}
+
+li {
+  line-height: 30px;
+  font-size: 18px;
+}
+
+ul {
+  margin-bottom: 15px;
+}
+
+.end {
+  display: flex;
+  width: 100%;
+  height: 50px;
+  align-items: flex-end;
+  font-size: 22px;
+  justify-content: center;
+  margin: 10px;
+}
