--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -24,6 +24,8 @@
   justify-content: center;
   align-items: center;
   font-style: oblique;
+  font-family: auto;
+  font-size: xx-large;
 }
 
 .home2 input {
@@ -38,7 +40,7 @@
   display: flex;
   flex-direction: column;
   background-color: #706767;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 }
 
 .user {
@@ -72,8 +74,10 @@
   align-items: center;
 }
 
-li {
+.home2 li {
   line-height: 30px;
+  font-weight: 900;
+  font-family: sans-serif;
   font-size: 18px;
 }
 
@@ -94,9 +98,11 @@ ul {
 .fa-xmark {
   position: absolute;
   right: 0;
-  padding: 8px;
+  font-size: larger;
+  padding: 10px;
   border-radius: 50%;
-  background-color: #1f1c1c;
+  background-color: #6a040f;
+  margin-right: -10px;
 }
 
 .fa-bars {
@@ -160,13 +166,14 @@ ul {
 
 .drinks-content h3 {
   position: absolute;
+  font-weight: 800;
   bottom: 0;
   margin-bottom: 15px;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(36, 35, 35);
+  background-color: #bc6c25;
   border: 1px solid rgba(61, 51, 51, 0.936);
   padding: 10px 0;
 }
@@ -191,12 +198,14 @@ ul {
 
 .dropDown li {
   font-weight: 500;
+  font-family: revert;
 }
 
 .dropDown li:hover {
-  background-color: #802b3c;
+  background-color: #d00000;
   width: 70px;
   padding: 3px;
+  border-radius: 5px 10px;
 }
 
 .icons-holder-right:hover .dropDown {
@@ -205,6 +214,6 @@ ul {
   background-color: #220909;
   margin-top: 150px;
   margin-left: -10px;
-  padding: 0 8px;
+  padding: 0 8px 0 12px;
   width: 80px;
 }
