--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -4,8 +4,10 @@
   background-position: right;
   background-repeat: no-repeat;
   height: 100vh;
-  /*   display: flex;
-  flex-direction: column; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .dashboard h2 {
@@ -25,7 +27,8 @@
 }
 
 .dashboard .sidebar {
-  position: fixed;
+  position: absolute;
+  left: 0;
   width: 250px;
   height: 100vh;
   display: flex;
@@ -88,6 +91,7 @@ ul {
 .admin {
   position: absolute;
   right: 0;
+  top: 0;
   margin: 30px 50px 0 0;
   padding: 10px 15px;
   background-color: #003566;
@@ -95,15 +99,16 @@ ul {
 }
 
 .ingredient-table {
-  margin-left: 300px;
+ /*  margin-left: 300px; */
   border: 1px solid red;
   min-width: 500px;
   border-collapse: collapse;
-  font-size: 0.9em;
+  font-size: 1em;
+  max-width: 300px;
 }
 
 .ingredient-table th {
-  background-color: blue;
+  background-color: #56cfe1;
   border-bottom: 1px solid black;
   border: 2px solid black;
   padding: 12px 15px;
@@ -112,7 +117,6 @@ ul {
 .ingredient-table tbody tr:nth-of-type(even) {
   background-color: #023e8a;
 }
-
 
 td {
   text-align: center;
